overflows fixed

--- a/css/theme-override.css
+++ b/css/theme-override.css
@@ -8,10 +8,13 @@ main {
     max-width: 1000px;
 }
 
-footer { font-size: 90%; }
+footer {
+    font-size: 90%;
+}
 
 code {
     font-family: 'Fira Code', monospace;
+    overflow-x: scroll;
 }
 
 @supports (font-variation-settings: normal) {
@@ -23,6 +26,7 @@ code {
     border-color: white;
     background-color: black;
     color: white;
+    overflow-x: scroll;
 }
 
 .challenge > h2 {
@@ -60,6 +64,7 @@ code {
 .citation {
     border-style: dashed;
     padding: 1rem!important;
+    overflow-x: scroll;
 }
 
 .citation > .source {
@@ -73,4 +78,5 @@ code {
     padding: 0.5rem!important;
     border-style: solid;
     border-width: 1px;
+    overflow-x: scroll;
 }
